--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Projecte que utilitza Tailwind CSS i Parcel",
   "scripts": {
-    "dev": "parcel serve src/main.html && parcel src/main.html --open",
+    "dev": "parcel src/main.html --open",
     "build": "parcel build src/main.html"
   },
   "keywords": [
@@ -21,7 +21,6 @@
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.5",
-    "parcel": "^2.0.0",
-    "postcss": "^8.4.31"
+    "parcel": "^2.0.0"
   }
 }
