--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "devDependencies": {
     "@parcel/transformer-postcss": "^2.10.0",
     "autoprefixer": "^10.4.16",
+    "parcel": "^2.0.0",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.3.5",
-    "parcel": "^2.0.0"
+    "tailwindcss": "^3.3.5"
+  },
+  "dependencies": {
+    "imagemin": "^8.0.1"
   }
 }
